--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "devicon": "^2.16.0",
+    "hamburger-react": "^2.5.1",
     "keen-slider": "^6.8.6",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -24,7 +25,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
 }
