--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@next/third-parties": "^15.1.0",
     "devicon": "^2.16.0",
     "hamburger-react": "^2.5.1",
     "keen-slider": "^6.8.6",
