--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "hamburger-react": "^2.5.1",
     "keen-slider": "^6.8.6",
     "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
